     in order to move the user encoding at the UI level. (Goffredo Baroncelli)

   * Add the function make_commit_message_template_encoded() and the function
     edit_commit_message_encoded() which handle encoded strings.
     This is done in order to mix the commit messages (which is a unicode
     string), and the diff which is a raw string. (Goffredo Baroncelli)

   * New trace function ``mutter_callsite`` will print out a subset of the
     stack to the log, which can be useful for gathering debug details.
     (Robert Collins)

    * ``bzrlib.pack.ContainerWriter`` now tracks how many records have been
      added via a public attribute records_written. (Robert Collins)

    * New method ``bzrlib.transport.Transport.get_recommended_page_size``.
      This provides a hint to users of transports as to the reasonable
      minimum data to read. In principle this can take latency and
      bandwidth into account on a per-connection basis, but for now it
      just has hard coded values based on the url. (e.g. http:// has a large
      page size, file:// has a small one.) (Robert Collins)

    * New method on ``bzrlib.transport.Transport`` ``open_write_stream`` allows
      incremental addition of data to a file without requiring that all the
      data be buffered in memory. (Robert Collins)

    * New methods on ``bzrlib.knit.KnitVersionedFile``:
      ``get_data_stream(versions)``, ``insert_data_stream(stream)`` and
      ``get_format_signature()``.  These provide some infrastructure for
      efficiently streaming the knit data for a set of versions over the smart
      protocol.

  TESTING:

    * Use UTF-8 encoded StringIO for log tests to avoid failures on
      non-ASCII committer names.  (Lukáš Lalinský)


bzr 0.90 2007-08-??
===================

  IMPROVEMENTS:

    * Documentation is now organized into multiple directories with a level
      added for different languages or locales. Added the Mini Tutorial